2003-11-09 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XmlDataSource.cs:
	* XmlDataSourceView.cs:
	* XmlHierarchicalDataSourceView.cs:
	* XmlHierarchicalEnumerable.cs:
	* XmlHierarchyData.cs: Implement

2003-11-08 Ben Maurer  <bmaurer@users.sourceforge.net>

	* SiteMapDataSourceView.cs: Implement.

2003-11-07 Jackson Harper <jackson@ximian.com>

	* ImageButton.cs: This is a workaround for bug #49819. It appears
	that the .x and .y values are not being posted, and only the x
	value is being posted with the ctrl's id as the key.
	
2003-11-07 Jackson Harper <jackson@ximian.com>

	* DataGrid.cs (CreateControlHierarchy): Current page index is
	alolowed to equal page count. This prevents an exception being
	thrown when both are zero.
	
2003-11-06 Jackson Harper <jackson@ximian.com>

	* ValidationSummary.cs: Add Render method. Patch by Yaron Shkop.
	* BaseValidator.cs: Disable base control so the isValid flag is
	not reset.
	
2003-11-03 Jackson Harper <jackson@ximian.com>

	* TemplateColumn.cs: Use the same renderer for selected items as
	normal items. This fixes bug #49744.
	
2003-11-03 Jackson Harper <jackson@ximian.com>

	* DataList.cs:
	* WebControl.cs: Fix argument out of range exceptions on
	properties. Patch by Yaron Shkop.
	
2003-11-03 Jackson Harper <jackson@ximian.com>

	* TemplateColumn.cs: If the item is selected but there is no
	editItemTemplate use the itemTemplate. This matches MS behvoir.
	
2003-11-03 Jackson Harper <jackson@ximian.com>

	* Repeater.cs: Always set alternating items to the AlternatingItem
	type, when instantiating alternating items use the itemTemplate if
	the alternatingItem template is null. This matches MS behavoir and
	fixes bug #50157.
	
2003-11-03 Jackson Harper <jackson@ximian.com>

	* DataGridPagerStyle.cs: Name of view state attribute is
	PagerVisible not Visible. Call owner.OnPagerChanged when the pager
	visibility is changed. Patch by Yaron Shkop.
	
2003-11-03 Jackson Harper <jackson@ximian.com>
